# OceanFFT-Simulator

./: .gitignore  CHECKLIST.md  CMakeLists.txt  EXECUTE.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  TECHNICAL_NOTES.md  WSL_GUIDE.md  build.bat  build.sh  download_glad.sh  install_wsl.sh
assets/: README.md
include/glad/: glad.h
shaders/: ocean.frag  ocean.vert
src/: Application.cpp  Application.h  Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  OceanFFT.cpp  OceanFFT.h  OceanRenderer.cpp  OceanRenderer.h  ShaderProgram.cpp  ShaderProgram.h  glad.c  main.cpp
